[gd_scene load_steps=7 format=3 uid="uid://dc4irds3lh1hu"]

[ext_resource type="AudioStream" uid="uid://yys2dqmo77ay" path="res://assets/Audios/Sons/Resposta_correta.ogg" id="1"]
[ext_resource type="Script" path="res://autoloads/Audio.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://1cvon2jt0hva" path="res://assets/Audios/Sons/Temporizador.ogg" id="3"]

[sub_resource type="Animation" id="3"]
resource_name = "aumentar_volume"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tocar_musica:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-25.0, -10.0]
}

[sub_resource type="Animation" id="2"]
resource_name = "diminuir_volume"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tocar_musica:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -25.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqumb"]
_data = {
"aumentar_volume": SubResource("3"),
"diminuir_volume": SubResource("2")
}

[node name="Audio" type="Node2D"]
script = ExtResource("2")

[node name="musica_bootsplash" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
bus = &"Musica"

[node name="tocar_musica" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
bus = &"Musica"

[node name="Som_botao" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
bus = &"Sons"

[node name="Som_errou" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
bus = &"Sons"

[node name="Som_acertou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1")
volume_db = 10.0
bus = &"Sons"

[node name="temporizador" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("3")
bus = &"Sons"

[node name="Som_cena_acertou" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
bus = &"Sons"

[node name="Som_cena_errou" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
bus = &"Sons"

[node name="Som_cena_tempo_esgotado" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
bus = &"Sons"

[node name="volume_animacao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gqumb")
}
